fix(plugin-mongodbwriter): repair the update key and the batch write (#1621)
* fix(plugin-mongodbwriter): reject a record with an empty update key

why: a record whose update key is missing or null produced the filter {key: null}, which MongoDB matches against every document where that field is absent, so the upsert wrote the record over an unrelated document.
what: such a record is collected as a dirty record before it reaches the batch buffer, and the update key is kept for the message.
impact: update mode no longer overwrites a document the record never named, a job that used to report success while losing data now reports the record as dirty.

* fix(plugin-mongodbwriter): keep the documents of a rejected batch

why: a failed batch was retried document by document, which re-issued the documents the first attempt had already written, reported them as dirty, and cost one round trip per document.
what: a batch is written unordered, so the server keeps every document it accepts and names the position of the ones it rejects; those positions are collected as dirty records, and the per-document retry is left for connection failures, which say nothing about which documents arrived.
impact: measured on a job of 2000 records with 4 rejected documents, failed records 1000 -> 4 and runtime 6s -> 3s; one rejected document no longer stops the rest of its batch.

* fix(plugin-mongodbwriter): say so when the writeMode is not understood

why: every writeMode that did not start with "update" was taken as an insert without a word, so a mistyped mode wrote documents the user did not ask for.
what: a mode that is neither insert nor update(field) is logged as unsupported before it is treated as an insert.
impact: a mistyped writeMode shows up in the log instead of being silently ignored.

* refactor(plugin-mongodbwriter): read the filter error as a text block

why: the message carries extended JSON examples whose quotes had to be escaped, and it was assembled from three concatenated s